Fix slider clipping issues
needs more testing on other screen resolutions

--- a/src/xenia/app/resources/themes/Xenia/stylesheets/XSlider.css
+++ b/src/xenia/app/resources/themes/Xenia/stylesheets/XSlider.css
@@ -1,3 +1,47 @@
-QSlider#XSlider {
-    color: $secondary;
+QSlider#XSlider::groove:horizontal {
+  background: $secondaryDark;
+  height: 4px;
+  margin: 0px 1px 0px 1px;
 }
+
+QSlider#XSlider::handle:horizontal {
+  width: 10px;
+  border-radius: 5px;
+  background: $secondary;
+  margin: -3px -1px -3px -1px;
+}
+
+QSlider#XSlider::groove:vertical {
+  background: $secondaryDark;
+  width: 4px;
+  margin: 1px 0px 1px 0px;
+}
+
+QSlider#XSlider::handle:vertical {
+  height: 10px;
+  border-radius: 5px;
+  background: $secondary;
+  margin: -1px -3px -1px -3px;
+}
+
+/* Uncomment these to make slider color different before the handle to after */
+
+/* QSlider#XSlider::sub-page:horizontal {
+  background: $secondaryDark;
+  margin: 0px 1px 0px 1px;
+}
+
+QSlider#XSlider::add-page:horizontal {
+  background: $light3;
+  margin: 0px 1px 0px 1px;
+}
+
+QSlider#XSlider::add-page:vertical {
+  background: $secondaryDark;
+  margin: 1px 0px 1px 0px;
+}
+
+QSlider#XSlider::sub-page:vertical {
+  background: $light3;
+  margin: 1px 0px 1px 0px;
+} */
